--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 
 #codeigniter 3
-application/config/database.php
+#application/config/database.php
 application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
